<resources>
    <string name="app_name">Music Player</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="settings">Settings</string>
    <string name="drive_mode">Drive Mode</string>
    <string name="privacy">Privacy Policy</string>
    <string name="Equalizer">Equalizer</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="pro_version">Go Pro</string>
    <string name="close">Close Drawer</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="rating">Rating</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="song_title">Song Title</string>
    <string name="_5mb">5MB</string>
    <string name="unknown">&lt;unknown&gt;</string>
    <string name="open">Open Drawer</string>
    <string name="theme">Theme</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="folder_fragment">FolderFragment</string>
    <string name="PlaylistFragment">PlaylistFragment</string>
    <string name="SongFragment">SongFragment</string>
    <string name="search">Search</string>
    <string name="new_playlist">New Playlist</string>
    <string name="_00_songs">00 Songs</string>
    <string name="folder_name">Folder Name</string>
    <string name="play_next">Play next</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="sort_by">Sort by</string>
    <string name="refresh">Refresh</string>
    <string name="song_name">Song Name</string>
    <string name="_00_00">00:00</string>
    <string name="year">Year</string>
    <string name="from_short_to_long">From short to long</string>
    <string name="from_long_to_short">From long t short</string>
    <string name="choose_your_favorite_theme">Choose Your Favorite Theme</string>
    <string name="x_has_been_set_as_ringtone">R</string>
    <string name="dialog_title_set_ringtone">d</string>
    <string name="dialog_message_set_ringtone">sd</string>
    <string name="keyboard">Keyboard</string>
    <string name="label_bit_rate">Bitrate</string>
    <string name="label_file_format">Format</string>
    <string name="label_file_name">File name</string>
    <string name="label_file_path">File path</string>
    <string name="label_file_size">Size</string>
    <string name="label_track_length">Length</string>
    <string name="label_sampling_rate">Sampling rate</string>
    <string name="label_last_modified">Last Modified</string>
    <string name="action_details">Details</string>
    <string name="for_you">For you</string>
    <string name="songs">Songs</string>
    <plurals name="albums">
        <item quantity="one">Album</item>
        <item quantity="other">Albums</item>
    </plurals>
    <string name="artists">Artists</string>
    <string name="about_album_label">About %s</string>
    <string name="about_settings_summary">Team, social links</string>
    <string name="accent_color">Accent color</string>
    <string name="accent_color_desc">The theme accent color, defaults to purple</string>
    <string name="action_about">About</string>
    <string name="action_add_to_blacklist">Add to Blacklist</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_add_to_playing_queue">Add to playing queue</string>
    <string name="action_add_to_playlist">Add to playlist</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_cast">Cast</string>
    <string name="action_clear_playing_queue">Clear playing queue</string>
    <string name="action_cycle_repeat">Cycle repeat mode</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="action_edit">Edit</string>
    <string name="action_go_to_album">Go to album</string>
    <string name="action_go_to_artist">Go to artist</string>
    <string name="action_go_to_genre">Go to genre</string>
    <string name="action_go_to_lyrics">Go to Lyrics</string>
    <string name="action_go_to_start_directory">Go to start directory</string>
    <string name="action_grant">Grant</string>
    <string name="action_grid_size">Grid size</string>
    <string name="action_grid_size_land">Grid size (land)</string>
    <string name="action_new_playlist">New playlist</string>
    <string name="action_next">Next</string>
    <string name="action_play">Play</string>
    <string name="action_play_all">Play all</string>
    <string name="action_play_next">Play next</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_previous">Previous</string>
    <string name="action_remove_from_favorites">Remove from favorites</string>
    <string name="action_remove_from_playing_queue">Remove from playing queue</string>
    <string name="action_remove_from_playlist">Remove from playlist</string>
    <string name="action_rename">Rename</string>
    <string name="action_save_playing_queue">Save playing queue</string>
    <string name="action_scan">Scan</string>
    <string name="action_search">Search</string>
    <string name="action_set">Start</string>
    <string name="action_set_as_ringtone">Set as ringtone</string>
    <string name="action_set_as_start_directory">Set as start directory</string>
    <string name="action_share">Share</string>
    <string name="action_shuffle_all">Shuffle all</string>
    <string name="action_shuffle_playlist">Shuffle playlist</string>
    <string name="action_sleep_timer">Sleep timer</string>
    <string name="action_sort_order">Sort order</string>
    <string name="action_tag_editor">Tag editor</string>
    <string name="action_toggle_favorite">Toggle favorite</string>
    <string name="action_toggle_shuffle">Toggle shuffle mode</string>
    <string name="adaptive">Adaptive</string>
    <string name="add_action">Add</string>
    <string name="add_playlist_title">"Add to playlist"</string>
    <string name="add_time_framed_lryics">Add Time Framed Lyrics</string>
    <string name="added_song_count_to_playlist">Added %1$d song(s) to %2$s</string>
    <string name="added_title_to_playing_queue">"Added 1 title to the playing queue."</string>
    <string name="added_x_titles_to_playing_queue">Added %1$d titles to the playing queue.</string>
    <plurals name="albumSongs">
        <item quantity="one">Song</item>
        <item quantity="other">Songs</item>
    </plurals>
    <string name="album_artist">Album Artist</string>
    <string name="always">Always</string>
    <string name="app_share">Hey check out this cool music player at: https://play.google.com/store/apps/details?id=%s</string>
    <string name="app_shortcut_shuffle_all_short">Shuffle</string>
    <string name="app_shortcut_top_tracks_short">Top Tracks</string>
    <string name="app_widget_big_name">Full Image</string>
    <string name="app_widget_card_name">Card</string>
    <string name="app_widget_classic_name">Classic</string>
    <string name="app_widget_md3_name">MD3</string>
    <string name="app_widget_small_name">Small</string>
    <string name="app_widget_text_name">Minimal Text</string>
    <string name="audio_fade_duration">Audio fade duration</string>
    <string name="audio_focus_denied">Audio focus denied.</string>
    <string name="audio_settings_summary">Change the sound settings and adjust the equalizer controls</string>
    <string name="empty_text_emoji" translatable="false">&#128561;</string>
    <string name="auto">Auto</string>
    <string name="backup_restore_settings_summary">Backup and restore your settings, playlists</string>
    <string name="backup_restore_title">
        <![CDATA[Backup & Restore]]>
    </string>
    <string name="backup_title">Backups</string>
    <string name="biography">Biography</string>
    <string name="black_theme_name">Just Black</string>
    <string name="blacklist">Blacklist</string>
    <string name="bluetooth_summary">The app needs nearby devices permission to check for bluetooth devices</string>
    <string name="bluetooth_title">Nearby devices</string>
    <string name="blur">Blur</string>
    <string name="blur_card">Blur Card</string>
    <string name="bug_report_failed">Unable to send report</string>
    <string name="bug_report_failed_invalid_token">Invalid access token. Please contact the app developer.</string>
    <string name="bug_report_failed_issues_not_available">Issues are not enabled for the selected repository. Please contact the app developer.</string>
    <string name="bug_report_failed_unknown">An unexpected error occurred. Please contact the app developer.</string>
    <string name="bug_report_failed_wrong_credentials">Wrong username or password</string>
    <string name="bug_report_issue">Issue</string>
    <string name="bug_report_manual">Send manually</string>
    <string name="bug_report_no_description">Please enter an issue description</string>
    <string name="bug_report_no_password">Please enter your valid GitHub password</string>
    <string name="bug_report_no_title">Please enter an issue title</string>
    <string name="bug_report_no_username">Please enter your valid GitHub username</string>
    <string name="bug_report_success">Bug report successful</string>
    <string name="bug_report_summary">An unexpected error occurred. Sorry you found this bug, if it keeps crashing \"Clear app data\" or send an Email </string>
    <string name="bug_report_use_account">Send using GitHub account</string>
    <string name="buy_now">Buy now</string>
    <string name="cancel_current_timer">Cancel</string>
    <string name="card">Card</string>
    <string name="card_color_style">Colored Card</string>
    <string name="card_square">Square Card</string>
    <string name="card_style">Card</string>
    <string name="carousal_effect_on_now_playing_screen">Carousel effect on the now playing screen</string>
    <string name="cascading">Cascading</string>
    <string name="changelog">Changelog</string>
    <string name="changelog_summary">Check out What\'s New</string>
    <string name="choose_image">Choose Image</string>
    <string name="choose_restore_title">Choose what to restore</string>
    <string name="genres">Genres</string>
    <string name="no_results">No results</string>
    <string name="playlist_name_empty">Playlist name</string>
    <string name="playlists">Playlists</string>
    <string name="play">Play</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="off">Off</string>
    <string name="_10minutes">10 minutes</string>
    <string name="_15minutes">15  minutes</string>
    <string name="_30minutes">30 minutes</string>
    <string name="_60minutes">60 minutes</string>
</resources>