<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/youtube_color"
        android:elevation="5dp" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarr"
            style="@style/Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/arrow_back"
            app:titleTextAppearance="@style/ToolbarTextAppearanceNormal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/action_search"
                    android:inputType="text|textAutoComplete"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textAppearance="@style/TextViewSubtitle1">

                    <requestFocus />
                </com.google.android.material.textfield.TextInputEditText>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/voiceSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?roundSelector"
                        android:padding="12dp"
                        app:srcCompat="@drawable/mic"
                        app:tint="?attr/colorControlNormal"
                        tools:visibility="visible" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/clearText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?roundSelector"
                        android:padding="12dp"
                        android:visibility="gone"
                        app:srcCompat="@drawable/close"
                        app:tint="?attr/colorControlNormal"
                        tools:visibility="visible" />
                </FrameLayout>
            </LinearLayout>
        </com.google.android.material.appbar.MaterialToolbar>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="@integer/overScrollMode"
            android:padding="5dp"
            android:scrollbars="none">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/searchFilterGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_audio"
                    style="@style/SearchChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/songs" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_artists"
                    style="@style/SearchChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artists" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_albums"
                    style="@style/SearchChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/albums" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_album_artists"
                    style="@style/SearchChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/album_artist" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_genres"
                    style="@style/SearchChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genres" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_playlists"
                    style="@style/SearchChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/playlists" />
            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/no_results"
        android:textAppearance="@style/TextViewHeadline6"
        android:visibility="visible"
        tools:visibility="visible" />

</LinearLayout>