<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:backgroundTint="@color/youtube_color"
        android:padding="8dp">


        <TextView
            android:id="@+id/playlistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:maxLines="1"
            android:text="@string/playlist_name_empty"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/play_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:src="@drawable/play_arrow"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:fontFamily="sans-serif"
            android:text="@string/play"
            android:textColor="@color/black"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/play_next_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:src="@drawable/play_next"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:fontFamily="sans-serif"
            android:text="@string/play_next"
            android:textColor="@color/black"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_to_queue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:src="@drawable/queue_music"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:fontFamily="sans-serif"
            android:text="@string/add_to_queue"
            android:textColor="@color/black"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_to_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:src="@drawable/playlist_add"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:fontFamily="sans-serif"
            android:text="@string/add_to_playlist"
            android:textColor="@color/black"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:src="@drawable/edit"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:fontFamily="sans-serif"
            android:text="@string/action_rename"
            android:textColor="@color/black"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:src="@drawable/delete"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:fontFamily="sans-serif"
            android:text="@string/delete_playlist"
            android:textColor="@color/black"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>