<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/album_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_marginEnd="2dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/watch"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@drawable/radius_rec"
            android:padding="10dp"
            android:src="@drawable/mic" />


        <TextView
            android:id="@+id/artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/watch"
            android:text="@string/new_playlist"
            android:textColor="@color/white"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/total_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/artist_name"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/watch"
            android:text="@string/_00_songs"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/total_songs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/artist_name"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/total_album"
            android:text="@string/unknown"
            android:textColor="@color/white"
            android:textSize="17dp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/more_vert" />

    </RelativeLayout>

</LinearLayout>