<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/album_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="2dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/watch"
            android:layout_width="48dp"
            android:layout_height="50dp"
            android:background="@drawable/radius_rec"
            android:padding="10dp"
            android:src="@drawable/album"
            app:tint="@color/pink" />


        <TextView
            android:id="@+id/album_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/watch"
            android:textSize="16sp"
            android:text="@string/new_playlist"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/total_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/album_name"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/watch"
            android:text="@string/_00_songs"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/album_name"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/total_song"
            android:text="@string/unknown"
            android:textColor="@color/white"
            android:textSize="17dp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/more_vert"
            app:tint="@color/black" />

    </RelativeLayout>


</FrameLayout>